// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item with icon children auto wrap span 1`] = `
Array [
  <ul
    class="fishd-menu fishd-menu-root fishd-menu-vertical fishd-menu-light"
    data-menu-list="true"
    dir="ltr"
    role="menu"
    tabindex="0"
  >
    <li
      class="fishd-menu-item"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      tabindex="-1"
    >
      <i
        class="fishdicon fishdicon-Settingx fishd-menu-item-icon"
      />
      <span
        class="fishd-menu-title-content"
      >
        Navigation One
      </span>
    </li>
    <li
      class="fishd-menu-item"
      data-menu-id="rc-menu-uuid-test-2"
      role="menuitem"
      tabindex="-1"
    >
      <i
        class="fishdicon fishdicon-Settingx fishd-menu-item-icon"
      />
      <span
        class="fishd-menu-title-content"
      >
        <span>
          Navigation One
        </span>
      </span>
    </li>
    <li
      class="fishd-menu-submenu fishd-menu-submenu-vertical"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-3-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="fishd-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-3"
        role="menuitem"
        tabindex="-1"
      >
        <i
          class="fishdicon fishdicon-Settingx fishd-menu-item-icon"
        />
        <span
          class="fishd-menu-title-content"
        >
          Navigation One
        </span>
        <i
          class="fishd-menu-submenu-arrow"
        />
      </div>
    </li>
    <li
      class="fishd-menu-submenu fishd-menu-submenu-vertical"
      role="none"
    >
      <div
        aria-controls="rc-menu-uuid-test-4-popup"
        aria-expanded="false"
        aria-haspopup="true"
        class="fishd-menu-submenu-title"
        data-menu-id="rc-menu-uuid-test-4"
        role="menuitem"
        tabindex="-1"
      >
        <i
          class="fishdicon fishdicon-Settingx fishd-menu-item-icon"
        />
        <span>
          Navigation One
        </span>
        <i
          class="fishd-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should controlled collapse work 1`] = `
Array [
  <ul
    class="fishd-menu fishd-menu-root fishd-menu-inline fishd-menu-light"
    data-menu-list="true"
    dir="ltr"
    role="menu"
    tabindex="0"
  >
    <li
      class="fishd-menu-item"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <i
        class="fishdicon fishdicon-Settingx fishd-menu-item-icon"
      />
      <span
        class="fishd-menu-title-content"
      >
        Option 1
      </span>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;

exports[`Menu should controlled collapse work 2`] = `
Array [
  <ul
    class="fishd-menu fishd-menu-root fishd-menu-vertical fishd-menu-light fishd-menu-inline-collapsed"
    data-menu-list="true"
    dir="ltr"
    role="menu"
    tabindex="0"
  >
    <li
      class="fishd-menu-item"
      data-menu-id="rc-menu-uuid-test-1"
      role="menuitem"
      style="padding-left: 24px;"
      tabindex="-1"
    >
      <i
        class="fishdicon fishdicon-Settingx fishd-menu-item-icon"
      />
      <span
        class="fishd-menu-title-content"
      >
        Option 1
      </span>
    </li>
  </ul>,
  <div
    aria-hidden="true"
    style="display: none;"
  />,
]
`;
